remove java16 feature (#35)